--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ default_options = -y -R
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.driver-class-disease=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/edsssdb?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=NewPwd2017
+spring.datasource.driver-class-disease = com.mysql.jdbc.Driver
+spring.datasource.url = ${EDSSSDB_DATASOURCE_URL:jdbc:mysql://localhost:3306/edsssdb?autoReconnect=true&useSSL=false}
+spring.datasource.username=${EDSSSDB_MYSQL_USER:edsss_usr}
+spring.datasource.password=${MYSQL_PASSWORD:NewPwd2017}
 
 # ===============================
 # = JPA / HIBERNATE
