Actualización en las respuestas del servicio.
SourcesResponse.
VersionsResponse.
SymptomsResponse.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=${port:8087}
-my.host = ${METAMAP_HOST:localhost} 
-my.port = ${METAMAP_PORT:8087}
 my.service.name = ${DISNET_SERVICE_NAME:DISNET API REST}
 my.service.code = ${DISNET_SERVICE_CODE:SE008}
-default_options = -y -R 
+my.header.param.token.name = ${HEADER_TOKEN:token}
+my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
+my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
 
 # ===============================
 # = DATA SOURCE
