driver-class-name properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.driver-class-disease = com.mysql.jdbc.Driver
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url = ${EDSSSDB_DATASOURCE_URL:jdbc:mysql://localhost:3306/edsssdb?autoReconnect=true&useSSL=false}
 spring.datasource.username=${EDSSSDB_MYSQL_USER:edsss_usr}
 spring.datasource.password=${MYSQL_PASSWORD:NewPwd2017}
