Actualización de las variables de entorno y cambio en la forma de obtener el nombre del cliente feign.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,43 +1,49 @@
-server.port=${port:8087}
+server.port = ${DISNET_SERVICE_PORT:8089}
+
 my.service.name = ${DISNET_SERVICE_NAME:DISNET API REST}
 my.service.code = ${DISNET_SERVICE_CODE:SE008}
-my.header.param.token.name = ${HEADER_TOKEN:token}
+my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
 my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
 my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
+my.header.param.token.name = ${HEADER_TOKEN:token}
 
 # ===============================
 # = DATA SOURCE
 # ===============================
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url = ${EDSSSDB_DATASOURCE_URL:jdbc:mysql://localhost:3306/edsssdb?autoReconnect=true&useSSL=false}
-spring.datasource.username=${EDSSSDB_MYSQL_USER:edsss_usr}
-spring.datasource.password=${MYSQL_PASSWORD:NewPwd2017}
+spring.datasource.username = ${EDSSSDB_MYSQL_USER:edsss_usr}
+spring.datasource.password = ${MYSQL_PASSWORD:NewPwd2017}
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=validation
+spring.jpa.properties.hibernate.hbm2ddl.auto = validation
 
 # ===============================
 # = TVP API
 # ===============================
 URI.TVP.API = http://localhost:8083/api/tvp
 
-#hystrix.command.default.execution.timeout.enabled = false
-hystrix.command.default.execution.timeout.enabled=false
-
-ribbon.ReadTimeOut=172800000
-ribbon.ConnectTimeOut=172800000
-ribbon.MaxAutoRetries=0
+# ===============================
+# = FEIGN NETFLIX
+# ===============================
+#CLAVE PARA QUE FUNCIONE FEIGN
+hystrix.command.default.execution.timeout.enabled = false
 
 # ===============================
 # = JSON Web Token
 # ===============================
 jwt.header = ${JWT_HEADER:Authorization}
 jwt.secret = ${JWT_SECRET:mySecret}
-jwt.expiration = 604800
-jwt.route.authentication.path = auth
-jwt.route.authentication.refresh = refresh
+jwt.expiration = ${JWT_EXPIRATION:604800}
+jwt.route.authentication.path = ${JWT_AUTH_PATH:auth}
+jwt.route.authentication.refresh = ${JWT_AUTH_REFRESH:refresh}
+
+jwt.claims.name.token = ${JWT_CLAIMS_NAME_TOKEN:token}
+jwt.claims.name.api_code = ${JWT_CLAIMS_NAME_API_CODE:api_code}
+jwt.claims.name.request = ${JWT_CLAIMS_NAME_REQUEST:request}
+jwt.claims.name.url = ${JWT_CLAIMS_NAME_URL:url}
