--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,13 @@ my.service.code = ${DISNET_SERVICE_CODE:SE008}
 my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
 my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
 my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
+
 my.header.param.token.name = ${HEADER_TOKEN:token}
+
+my.service.rest.request.mapping.general.url = ${DISNET_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/disnet}
+my.service.rest.request.mapping.sources.path = ${DISNET_SERVICE_REST_REQUEST_MAPPING_SOURCES_PATH:/sources}
+
+my.service.rest.request.mapping.diseases.findings.path = ${DISNET_SERVICE_REST_REQUEST_MAPPING_SOURCES_PATH:/diseases/findings}
 
 # ===============================
 # = DATA SOURCE
