--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port = ${DISNET_SERVICE_PORT:8089}
 my.service.name = ${DISNET_SERVICE_NAME:DISNET API REST}
 my.service.code = ${DISNET_SERVICE_CODE:SE008}
 my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
-my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000}
-my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/validation_service}
+my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000/api/authorization}
+my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/token}
 
 my.header.param.token.name = ${HEADER_TOKEN:token}
 
