--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port = ${DISNET_SERVICE_PORT:8089}
+#server.port = ${DISNET_SERVICE_PORT:8089} se usa cuando se levantan los servicio sin docker
+server.port = ${DISNET_SERVICE_PORT:8080}
 
 my.service.name = ${DISNET_SERVICE_NAME:DISNET API REST}
 my.service.code = ${DISNET_SERVICE_CODE:SE008}
