Actualización de variables de entorno.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,17 +10,17 @@ my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/token}
 my.header.param.token.name = ${HEADER_TOKEN:token}
 
 my.service.rest.request.mapping.general.url = ${DISNET_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/disnet}
-my.service.rest.request.mapping.sources.path = ${DISNET_SERVICE_REST_REQUEST_MAPPING_SOURCES_PATH:/sources}
 
+my.service.rest.request.mapping.sources.path = ${DISNET_SERVICE_REST_REQUEST_MAPPING_SOURCES_PATH:/sources}
 my.service.rest.request.mapping.diseases.findings.path = ${DISNET_SERVICE_REST_REQUEST_MAPPING_SOURCES_PATH:/diseases/findings}
 
 # ===============================
 # = DATA SOURCE
 # ===============================
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = ${EDSSSDB_DATASOURCE_URL:jdbc:mysql://localhost:3306/edsssdb?autoReconnect=true&useSSL=false}
-spring.datasource.username = ${EDSSSDB_MYSQL_USER:edsss_usr}
-spring.datasource.password = ${MYSQL_PASSWORD:NewPwd2017}
+spring.datasource.url = ${EDSSS_DB_DATASOURCE_URL:jdbc:mysql://localhost:3306/edsssdb?autoReconnect=true&useSSL=false}
+spring.datasource.username = ${EDSSS_DB_MYSQL_USER:edsss_usr}
+spring.datasource.password = ${EDSSS_DB_MYSQL_PASSWORD:NewPwd2017}
 
 # ===============================
 # = JPA / HIBERNATE
