Configuración para evitar errores con feign al cargar jar en docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,9 @@ jwt.claims.name.url = ${JWT_CLAIMS_NAME_URL:url}
 # ===============================
 my.service.error_code = ${TVP_SERVICE_ERROR_CODE:05}
 disnet.general.error_code = ${DISNET_GENERAL_ERROR_CODE:DNERR_}
+
+
+spring.application.name=disnet_rest
+spring.cloud.config.server.bootstrap=true
+spring.cloud.config.server.prefix=/config
+spring.cloud.config.server.git.uri= file://${user.home}/Desktop/config
