--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,13 @@ server.port = ${DISNET_SERVICE_PORT:8080}
 
 my.service.name = ${DISNET_SERVICE_NAME:DISNET API REST}
 my.service.code = ${DISNET_SERVICE_CODE:SE008}
-my.service.authorization.name = ${SERVICE_AUTHORIZATION_NAME:auth-client}
-my.service.authorization.url = ${SERVICE_AUTHORIZATION_URL:http://localhost:3000/api/authorization}
-my.service.authorization.path = ${SERVICE_AUTHORIZATION_PATH:/token}
+my.service.authorization.name = ${AUTHORIZATION_SERVICE_NAME:auth-client}
+my.service.authorization.url = ${AUTHORIZATION_SERVICE_URL:http://localhost:3000/api/authorization}
+my.service.authorization.path = ${AUTHORIZATION_SERVICE_TOKEN_PATH:/token}
+my.service.authorization.validation.update_query_runtime.path = ${AUTHORIZATION_SERVICE_UPDATE_QUERY_RUNTIME_PATH:/update_query_runtime}
 
 my.header.param.token.name = ${HEADER_TOKEN:token}
-
-my.service.rest.request.mapping.general.url = ${DISNET_SERVICE_REST_REQUEST_MAPPING_GENERAL_URL:/api/disnet}
-
-my.service.rest.request.mapping.sources.path = ${DISNET_SERVICE_REST_REQUEST_MAPPING_SOURCES_PATH:/sources}
-my.service.rest.request.mapping.diseases.findings.path = ${DISNET_SERVICE_REST_REQUEST_MAPPING_SOURCES_PATH:/diseases/findings}
+my.service.rest.request.mapping.general.url = ${DISNET_SERVICE_ROOT_PATH:/api/disnet}
 
 # ===============================
 # = DATA SOURCE
@@ -54,11 +51,12 @@ jwt.claims.name.token = ${JWT_CLAIMS_NAME_TOKEN:token}
 jwt.claims.name.api_code = ${JWT_CLAIMS_NAME_API_CODE:api_code}
 jwt.claims.name.request = ${JWT_CLAIMS_NAME_REQUEST:request}
 jwt.claims.name.url = ${JWT_CLAIMS_NAME_URL:url}
+jwt.claims.name.transaction_id = ${JWT_CLAIMS_NAME_TRANSACTION_ID:transaction_id}
 
 # ===============================
 # = Error control
 # ===============================
-my.service.error_code = ${TVP_SERVICE_ERROR_CODE:05}
+my.service.error_code = ${DISNET_SERVICE_ERROR_CODE:05}
 disnet.general.error_code = ${DISNET_GENERAL_ERROR_CODE:DNERR_}
 
 
