Reestructuración de las carpetas del modulo de autorización

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = ${DISNET_SERVICE_PORT:8080}
 my.service.name = ${DISNET_SERVICE_NAME:DISNET API REST}
 my.service.code = ${DISNET_SERVICE_CODE:SE008}
 my.service.authorization.name = ${AUTHORIZATION_SERVICE_NAME:auth-client}
-#my.service.authorization.url = ${AUTHORIZATION_SERVICE_URL:http://localhost:3000/api/authorization}
+#my.api_response.authorization.url = ${AUTHORIZATION_SERVICE_URL:http://localhost:3000/api/authorization}
 my.service.authorization.url = ${AUTHORIZATION_SERVICE_URL:138.4.130.6:10605/api/authorization}
 my.service.authorization.path = ${AUTHORIZATION_SERVICE_TOKEN_PATH:/token}
 my.service.authorization.validation.update_query_runtime.path = ${AUTHORIZATION_SERVICE_UPDATE_QUERY_RUNTIME_PATH:/update_query_runtime}
