Implementación de CORSFilter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,3 +71,8 @@ spring.application.name=disnet_rest
 spring.cloud.config.server.bootstrap=true
 spring.cloud.config.server.prefix=/config
 spring.cloud.config.server.git.uri= file://${user.home}/Desktop/config
+
+
+security.basic.enabled=false
+security.user.name=user1
+security.user.password=123456
