--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,17 +13,15 @@ my.header.param.token.name = ${HEADER_TOKEN:token}
 my.service.rest.request.mapping.general.url = ${DISNET_SERVICE_ROOT_PATH:/api/disnet}
 
 # ===============================
-# = DATA SOURCE
+# = DATA SOURCE EDSSSDB
 # ===============================
+
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 #spring.datasource.url = ${EDSSS_DB_DATASOURCE_URL:jdbc:mysql://localhost:3306/edsssdb?autoReconnect=true&useSSL=false}
 spring.datasource.url=${EDSSS_DB_DATASOURCE_URL:jdbc:mysql://138.4.130.153:30602/edsssdb?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8}
 spring.datasource.username = ${EDSSS_DB_MYSQL_USER:edsss_usr}
 spring.datasource.password = ${EDSSS_DB_MYSQL_PASSWORD:edsssNewPwd2017}
 #spring.datasource.password = ${EDSSS_DB_MYSQL_PASSWORD:NewPwd2017}
-
-#NewPwd2017
-#edsssNewPwd2017
 
 # ===============================
 # = JPA / HIBERNATE
